# Protocol

./: CMakeLists.txt
.github/workflows/: main.yml
include/sculk/protocol/auth/: AuthenticationKeyManager.hpp  ClientProperties.hpp  ConnectionRequest.hpp  LegacyCertificateChain.hpp  LoginToken.hpp
include/sculk/protocol/codec/camera/: CameraInstruction.hpp
include/sculk/protocol/codec/inventory/item/: NetworkItemStackDescriptor.hpp
include/sculk/protocol/codec/level/: PrimitiveShapes.hpp
include/sculk/protocol/codec/packet/: ClientMovementPredictionSyncPacket.hpp  InventorySlotPacket.hpp
include/sculk/protocol/utility/: Result.hpp  Variant.hpp
src/sculk/protocol/auth/: AuthenticationKeyManager.cpp  ClientProperties.cpp  ConnectionRequest.cpp  LegacyCertificateChain.cpp  LoginToken.cpp
src/sculk/protocol/auth/ssl/: RS256.hpp
src/sculk/protocol/codec/camera/: CameraInstruction.cpp
src/sculk/protocol/codec/inventory/item/: NetworkItemStackDescriptor.cpp
src/sculk/protocol/codec/packet/: InventorySlotPacket.cpp
